--- a/src/App.scss
+++ b/src/App.scss
@@ -92,9 +92,6 @@ a {
         height: 100%;
         z-index: 1;
         transition: transform 0.5s ease-in-out;
-        &:hover {
-          transform: translateX(-5%);
-        }
       }
       .kateBg {
         position: absolute;
@@ -102,7 +99,12 @@ a {
         left: 20%;
         transform: translateY(-23%);
         transition: transform 0.5s ease-in-out;
-        &:hover {
+      }
+      &:hover {
+        .kate {
+          transform: translateX(-5%);
+        }
+        .kateBg {
           transform: translateY(-5%);
         }
       }
