--- a/src/App.scss
+++ b/src/App.scss
@@ -1,113 +1,1 @@
-// Typgraphy
-a {
-  text-decoration: none;
-}
-
-.app {
-  width: 100%;
-  height: 100vh;
-  background: #edf2fc;
-  position: relative;
-  font-family: sans-serif;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: flex-start;
-  //   align-content: flex-start;
-
-  nav {
-    display: flex;
-    width: 100%;
-    img {
-      object-fit: contain;
-      width: 50px;
-      align-self: flex-start;
-    }
-
-    ul {
-      text-align: right;
-      flex-grow: 1;
-      margin-right: 5rem;
-      li {
-        list-style: none;
-        display: inline-block;
-
-        a {
-          padding: 0.5rem;
-          margin: 0 0.5rem;
-
-          &:hover {
-            color: #ff4321;
-          }
-        }
-      }
-    }
-  }
-
-  .info {
-    display: flex;
-    width: 100%;
-    .info-left {
-      flex-basis: 50%;
-      display: flex;
-      flex-flow: row wrap;
-      align-content: start;
-      .left-content {
-        margin-left: 4rem;
-        h1 {
-          flex: 1 100%;
-          font-size: 70px;
-          color: #212121;
-          margin: 0px !important;
-        }
-        span {
-          color: #ff4321;
-        }
-        p {
-          flex: 1 100%;
-          color: #606163;
-          // margin: 0px !important;
-        }
-        a {
-          background: #212121;
-          padding: 10px 18px;
-          color: #fff;
-          // margin: auto;
-          display: inline-block;
-          border-radius: 5px;
-        }
-      }
-    }
-    .info-right {
-      flex-basis: 50%;
-      position: relative;
-      img {
-        object-fit: contain;
-      }
-      .kate {
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 1;
-        transition: transform 0.5s ease-in-out;
-      }
-      .kateBg {
-        position: absolute;
-        width: 62%;
-        left: 20%;
-        transform: translateY(-23%);
-        transition: transform 0.5s ease-in-out;
-      }
-      &:hover {
-        .kate {
-          transform: translateX(-5%);
-        }
-        .kateBg {
-          transform: translateY(-5%);
-        }
-      }
-    }
-  }
-}
+import 'bootstrap/dist/css/bootstrap.min.css'
